--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,15 +1,15 @@
 server {
     listen 80;
-    server_name pe-week1-demo.duckdns.org;
+    server_name priyahariharan.duckdns.org;
 
-    if ($host = pe-week1-demo.duckdns.org) {
+    if ($host = priyahariharan.duckdns.org) {
         return 301 https://$host$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name pe-week1-demo.duckdns.org;
+    server_name priyahariharan.duckdns.org;
 
     location / {
         proxy_pass http://myportfolio:5000/;
