--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -17,8 +17,8 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/myportfolio/fullchain.pem;
     ssl_certificate_key
-/etc/letsencrypt/live/myportfolio/privkey.pem 
+/etc/letsencrypt/live/myportfolio/privkey.pem;
     ssl_trusted_certificate
-/etc/letsencrypt/live/myportfolio/chain.pem 
+/etc/letsencrypt/live/myportfolio/chain.pem; 
 }
 
