--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,7 +28,7 @@ services:
       - 443:433
     volumes:
       - nginx_secrets:/etc/letsencrypt
-      - ./user/conf.d:/etc/nginx/user_conf.d
+      - ./user_conf.d:/etc/nginx/user_conf.d
     depends_on:
       - myportfolio
 
