--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,12 +4,12 @@ services:
     container_name: myportfolio
     build: .
     restart: always
-    env_file: 
+    env_file:
       - .env
     depends_on:
       - mysql
 
-  mysql:            
+  mysql:
     container_name: mysql
     image: mariadb
     restart: always
@@ -19,13 +19,14 @@ services:
       - mydatabase:/var/lib/mysql
 
   nginx:
-    container_image: nginx 
+    container_name: nginx
     image: jonasal/nginx-certbot
     restart: always
-    environment: CERTBOT_EMAIL=name@example.com
+    environment:
+      CERTBOT_EMAIL: name@example.com
     ports:
       - 80:80
-      - 443:433
+      - 443:443
     volumes:
       - nginx_secrets:/etc/letsencrypt
       - ./user_conf.d:/etc/nginx/user_conf.d
