--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,7 +23,7 @@ services:
     image: jonasal/nginx-certbot
     restart: always
     environment:
-      - CERTBOT_EMAIL=email
+      - CERTBOT_EMAIL=priya.hariharan818@gmail.com
     ports:
       - 80:80
       - 443:443
