--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cryptography==37.0.2
 Flask==2.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Markdown==3.3.4
 MarkupSafe==2.0.1
 peewee==3.14.10
 pycparser==2.21
