--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ cffi==1.15.0
 click==8.0.1
 cryptography==37.0.2
 Flask==2.0.1
+Flask-WTF==0.15.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
+pandas==1.3.3
 peewee==3.14.10
 pycparser==2.21
 PyMySQL==1.0.2
